src/test/ui/consts/too_generic_eval_ice.stderr
error: constant expression depends on a generic parameter
  --> $DIR/too_generic_eval_ice.rs:7:13
   |
LL |         [5; Self::HOST_SIZE] == [6; 0]
   |             ^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/too_generic_eval_ice.rs:7:30
   |
LL |         [5; Self::HOST_SIZE] == [6; 0]
   |                              ^^
   |
   = note: this may fail depending on what value the parameter takes

error[E0277]: can't compare `[{integer}; _]` with `[{integer}; 0]`
  --> $DIR/too_generic_eval_ice.rs:7:30
   |
LL |         [5; Self::HOST_SIZE] == [6; 0]
   |                              ^^ no implementation for `[{integer}; _] == [{integer}; 0]`
   |
   = help: the trait `PartialEq<[{integer}; 0]>` is not implemented for `[{integer}; _]`
   = help: the following other types implement trait `PartialEq<Rhs>`:
             <&[B] as PartialEq<[A; N]>>
             <&[T] as PartialEq<Vec<U, A>>>
             <&mut [B] as PartialEq<[A; N]>>
             <&mut [T] as PartialEq<Vec<U, A>>>
             <[A; N] as PartialEq<&[B]>>
             <[A; N] as PartialEq<&mut [B]>>
             <[A; N] as PartialEq<[B; N]>>
             <[A; N] as PartialEq<[B]>>
           and 3 others

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
